[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pos_Aer"
version = "0.0.1"
description = "pos data anal"
authors = [
  { name = "k" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.8.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "loguru>=0.6.0",
    "typer>=0.7.0",
    "tqdm>=4.64.0",
    "python-dotenv>=0.19.0",
    "shap>=0.41.0"
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true


